--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -11,7 +11,8 @@
 			"@/*": ["./src/*"]
 		},
 		"types": [
-			"jasmine"
+			"jasmine",
+			"node"
 		],
 		"typeRoots": [
 			"node_modules/@types"
