--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             - cache-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
 
       - run:
-          name: Building Server
+          name: Testing
           command: yarn run test
 
 #----------------
